# qwen-reasoning-0.5B

./: .gitignore  README.md  pyproject.toml  scotd_train.py  sft-mixed-gsm8k.py  sft-mixed-gsm8k.py.py  sft_scotd.py  train.py
