[project]
name = "qwen-reasoning-0.5b"
version = "0.1.0"
description = "Distilling reasoning capabilities into small models using SCoTD and GRPO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
    "wandb>=0.22.3",
]
